docs/0.17/_sources/api/gammapy.irf.PSFMap.rst.txt
PSFMap
======

.. currentmodule:: gammapy.irf

.. autoclass:: PSFMap
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~PSFMap.psf_map

   .. rubric:: Methods Summary

   .. autosummary::

      ~PSFMap.containment_radius_map
      ~PSFMap.copy
      ~PSFMap.cutout
      ~PSFMap.from_energy_dependent_table_psf
      ~PSFMap.from_geom
      ~PSFMap.from_hdulist
      ~PSFMap.get_energy_dependent_table_psf
      ~PSFMap.get_psf_kernel
      ~PSFMap.read
      ~PSFMap.sample_coord
      ~PSFMap.stack
      ~PSFMap.to_hdulist
      ~PSFMap.to_image
      ~PSFMap.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: psf_map

   .. rubric:: Methods Documentation

   .. automethod:: containment_radius_map
   .. automethod:: copy
   .. automethod:: cutout
   .. automethod:: from_energy_dependent_table_psf
   .. automethod:: from_geom
   .. automethod:: from_hdulist
   .. automethod:: get_energy_dependent_table_psf
   .. automethod:: get_psf_kernel
   .. automethod:: read
   .. automethod:: sample_coord
   .. automethod:: stack
   .. automethod:: to_hdulist
   .. automethod:: to_image
   .. automethod:: write
