docs/0.18.1/_sources/api/gammapy.irf.PSFMap.rst.txt
PSFMap
======

.. currentmodule:: gammapy.irf

.. autoclass:: PSFMap
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~PSFMap.psf_map
      ~PSFMap.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~PSFMap.containment_radius_map
      ~PSFMap.copy
      ~PSFMap.cutout
      ~PSFMap.downsample
      ~PSFMap.from_energy_dependent_table_psf
      ~PSFMap.from_gauss
      ~PSFMap.from_geom
      ~PSFMap.from_hdulist
      ~PSFMap.get_energy_dependent_table_psf
      ~PSFMap.get_psf_kernel
      ~PSFMap.read
      ~PSFMap.sample_coord
      ~PSFMap.slice_by_idx
      ~PSFMap.stack
      ~PSFMap.to_hdulist
      ~PSFMap.to_image
      ~PSFMap.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: psf_map
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: containment_radius_map
   .. automethod:: copy
   .. automethod:: cutout
   .. automethod:: downsample
   .. automethod:: from_energy_dependent_table_psf
   .. automethod:: from_gauss
   .. automethod:: from_geom
   .. automethod:: from_hdulist
   .. automethod:: get_energy_dependent_table_psf
   .. automethod:: get_psf_kernel
   .. automethod:: read
   .. automethod:: sample_coord
   .. automethod:: slice_by_idx
   .. automethod:: stack
   .. automethod:: to_hdulist
   .. automethod:: to_image
   .. automethod:: write
